--- a/helm-charts/imagebuilder/values.yaml
+++ b/helm-charts/imagebuilder/values.yaml
@@ -34,10 +34,7 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-resources:
-  limits:
-    cpu: 1000m
-    memory: 2G
+resources: {}
 
 nodeSelector: {}
 tolerations: []
