--- a/helm-charts/imagebuilder/templates/deployment.yaml
+++ b/helm-charts/imagebuilder/templates/deployment.yaml
@@ -39,6 +39,7 @@ spec:
           initContainers:
           - name: git-cloner
             image: "{{ $.Values.image.repository }}:{{ $.Values.image.tag | default $.Chart.AppVersion }}"
+            command: ["/bin/bash"]
             args:
               - "git"
               - "clone"
