--- a/helm-charts/imagebuilder/templates/deployment.yaml
+++ b/helm-charts/imagebuilder/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
         - name: GIT_SYNC_BRANCH
           value: main
         - name: GIT_SYNC_DEST
-          value: "1"
+          value: "/workspace"
         - name: GIT_SYNC_ONE_TIME
           value: "true"
         - name: GIT_SYNC_SSH
@@ -43,13 +43,8 @@ spec:
       volumes:
       - name: git-secret
         secret:
-          secretName: git-deploy-key
-          defaultMode: 0400
-          items:
-          - key: "id_rsa"
-            path: "ssh"
-          - key: "known_hosts"
-            path: "known_hosts"
+          secretName: git-creds
+          defaultMode: 256
       containers:
         - name: "{{ $name }}"
           image: "{{ $.Values.image.repository }}:{{ $.Values.image.tag | default $.Chart.AppVersion }}"
