--- a/helm-charts/imagebuilder/templates/deployment.yaml
+++ b/helm-charts/imagebuilder/templates/deployment.yaml
@@ -65,6 +65,8 @@ spec:
             value: /workspace
           - name: GIT_SYNC_DEST
             value: files
+          - name: GIT_SYNC_ONE_TIME
+            value: "true"
       volumes:
       - name: git-creds
         secret:
